Reworking app to remove browserify

--- a/app/index_old.html
+++ b/app/index_old.html
@@ -15,10 +15,10 @@
 
 	</head>
 
-	<body ng-app="BigData">
+	<body ng-app="Dashboard">
 
 
-		<div class="page-container" ng-controller="Dashboard">
+		<div class="page-container" ng-controller="DashboardCtrl">
       
       <h2>My Dashboard</h2>
       
@@ -54,11 +54,11 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({.tmp,app}) src/scripts.js -->
-		<script src="src/app.js"></script>	
-		<script src="src/controllers/canvasCtrl.js"></script>
-		<script src="src/controllers/dashboardCtrl.js"></script>
-		<script src="src/controllers/jsonDataCtrl.js"></script>
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+		<script src="scripts/app.js"></script>	
+		<!-- <script src="scripts/controllers/canvasCtrl.js"></script> -->
+		<!-- <script src="scripts/controllers/dashboardCtrl.js"></script> -->
+		<!-- <script src="scripts/controllers/jsonDataCtrl.js"></script> -->
 		<!-- endbuild -->
 	</body>			
 </html>
