--- a/app/d3.html
+++ b/app/d3.html
@@ -47,11 +47,22 @@
         <head-pie data="vm.chartData"></head-pie>
           <div class="sliders">
             <div ng-repeat="dataItem in vm.chartData">
-              <input type="range" ng-model="dataItem.strength">
+              <input type="range" ng-model="dataItem.strength" />
               <label class="character-label"> {{dataItem.name}} </label>
+              <button ng-click="removeCharacter(dataItem.name)"  class="remove-character">Remove</button>
             </div>
           </div>
-        
+          <div class="add-character">
+            <div class="input-item">
+              <label>Name: </label><input type="text" ng-model="vm.newCharacter.name"/>
+            </div>
+            <div class="input-item">
+              <label>Strength: </label><input type="text" ng-model="vm.newCharacter.strength"/>
+            </div>
+            <div class="input-item">
+              <button ng-click="addCharacter(vm.newCharacter)">Add</button>
+            </div>
+          </div>
       </div>
     </div>
 		
