--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 		<script src="src/app.js"></script>
     <script src="src/factories/jsonData.factory.js"></script>
     <script src="src/factories/d3Data.factory.js"></script>
+    <script src="src/factories/pieChart.factory.js"></script>
     <script src="src/filters/productize.filter.js"></script>   
 		<script src="src/controllers/canvas.js"></script>
 		<script src="src/controllers/dashboard.js"></script>
