adding filter directive to control pie charts

--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
     <script src="src/directives/hover.directive.js"></script>
     <script src="src/directives/canvas.directive.js"></script>
     <script src="src/directives/d3chart.directive.js"></script>
+    <script src="src/directives/filterChart.directive.js"></script>
 
     
 		<!-- endbuild -->
